# site-extractor

./: .env.example  .gitignore  CLAUDE.md  README.md  SESSION_RESUME.md  docker-compose.yml  pyproject.toml  requirements.md
docs/: iterative-boundary-design.md  pipeline-state-design.md
services/api-gateway/: Dockerfile  requirements.txt
services/api-gateway/app/: config.py  database.py  main.py
services/api-gateway/app/routes/: extraction.py  internal.py  jobs.py  pages.py  schemas.py  scraper.py  system.py
services/api-gateway/app/services/: auto_resume.py  page_injector.py  redis_consumer.py  seed_templates.py
services/extraction-service/: Dockerfile  requirements.txt
services/extraction-service/app/: config.py  main.py
services/extraction-service/app/extractor/: engine.py
services/extraction-service/app/routes/: extraction.py
services/extractor-gateway/: Dockerfile
services/extractor-gateway/app/: database.py  main.py
services/extractor-gateway/app/routes/: asset.py  extraction.py  internal.py  jobs.py  pages.py
services/scraper-service/: Dockerfile  requirements.txt
services/scraper-service/app/: config.py  main.py
services/shared/: models.py  pipeline_stages.py  state_machine.py
services/ui/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
services/ui/src/: App.tsx  index.css
tests/: test_dedup_config.py  test_extraction_disk_check.py  test_iterative_boundary.py  test_pipeline_stages.py  test_state_machine.py  test_style_property.py
tests/fixtures/: example_iterative.html  pipeline_stages.json
(+28 files in other folders)
